[gd_scene load_steps=15 format=4 uid="uid://doto5mvus1gca"]

[ext_resource type="Script" uid="uid://ncs7vorwtpcp" path="res://scripts/levels/test_build_three_levels/test_build_three_level_4.gd" id="1_tl3hy"]
[ext_resource type="Script" uid="uid://bpo1stkscwj61" path="res://scripts/screenshot_camera.gd" id="2_ocg4o"]
[ext_resource type="PackedScene" uid="uid://bt7c7i6kfmkg1" path="res://scenes/tools/world_boundaries.tscn" id="3_80uqp"]
[ext_resource type="PackedScene" uid="uid://c1ga3ku8h8jtx" path="res://scenes/players/00_prototypes/prototype_player_left.tscn" id="4_o8inu"]
[ext_resource type="PackedScene" uid="uid://dw4wntmk3vm5r" path="res://scenes/players/03_action/player_right.tscn" id="5_li13c"]
[ext_resource type="Texture2D" uid="uid://pdqtu5vgi6yk" path="res://assets/sprites/00_placeholders/temple-tileset.png" id="6_71hmi"]
[ext_resource type="PackedScene" uid="uid://dexbghebo1vra" path="res://scenes/ui/menus/pause_menu.tscn" id="7_0oe61"]
[ext_resource type="PackedScene" uid="uid://btq6qqh12hbij" path="res://scenes/ui/level_title.tscn" id="8_iflv0"]
[ext_resource type="PackedScene" uid="uid://bq8qlq4ecrkft" path="res://scenes/ui/countdown_timer.tscn" id="9_qvpgf"]
[ext_resource type="PackedScene" uid="uid://cukihpfcauofe" path="res://scenes/ui/menus/out_of_time.tscn" id="10_ep5uf"]
[ext_resource type="PackedScene" uid="uid://djf41hksfjemg" path="res://scenes/ui/menus/level_win_menu.tscn" id="11_5tgq5"]
[ext_resource type="PackedScene" uid="uid://w1n1spgbj0tv" path="res://scenes/ui/tutorial_prompts.tscn" id="12_prg6g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2fliv"]
texture = ExtResource("6_71hmi")
0:0/0 = 0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_0k1se"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
physics_layer_1/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_2fliv")

[node name="test_build_three_level_4" type="Node2D"]
script = ExtResource("1_tl3hy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("2_ocg4o")

[node name="WorldBoundaries" parent="." instance=ExtResource("3_80uqp")]

[node name="Players" type="Node" parent="."]

[node name="PlayerLeft" parent="Players" instance=ExtResource("4_o8inu")]
z_index = 1
position = Vector2(-174, 96)

[node name="PlayerRight" parent="Players" instance=ExtResource("5_li13c")]
position = Vector2(174, 96)

[node name="TileLayers" type="Node" parent="."]

[node name="Background" type="TileMapLayer" parent="TileLayers"]
z_index = -5
tile_map_data = PackedByteArray("AADw//f/AgAEAAMAAADw//j/AgAEAAMAAADw//n/AgAEAAMAAADw//r/AgAEAAMAAADw//v/AgAEAAMAAADw//z/AgAEAAMAAADw//3/AgAEAAMAAADw//7/AgAEAAMAAADw////AgAEAAMAAADw/wAAAgAEAAMAAADw/wEAAgAEAAMAAADw/wIAAgAEAAMAAADw/wMAAgAEAAMAAADw/wQAAgAEAAMAAADw/wUAAgAEAAMAAADw/wYAAgAEAAMAAADw/wcAAgAEAAMAAADw/wgAAgAEAAMAAADx//f/AgAEAAMAAADx//j/AgAEAAMAAADx//n/AgAEAAMAAADx//r/AgAEAAMAAADx//v/AgAEAAMAAADx//z/AgAEAAMAAADx//3/AgAEAAMAAADx//7/AgAEAAMAAADx////AgAEAAMAAADx/wAAAgAEAAMAAADx/wEAAgAEAAMAAADx/wIAAgAEAAMAAADx/wMAAgAEAAMAAADx/wQAAgAEAAMAAADx/wUAAgAEAAMAAADx/wYAAgAEAAMAAADx/wcAAgAEAAMAAADx/wgAAgAEAAMAAADy//f/AgAEAAMAAADy//j/AgAEAAMAAADy//n/AgAEAAMAAADy//r/AgAEAAMAAADy//v/AgAEAAMAAADy//z/AgAEAAMAAADy//3/AgAEAAMAAADy//7/AgAEAAMAAADy////AgAEAAMAAADy/wAAAgAEAAMAAADy/wEAAgAEAAMAAADy/wIAAgAEAAMAAADy/wMAAgAEAAMAAADy/wQAAgAEAAMAAADy/wUAAgAEAAMAAADy/wYAAgAEAAMAAADy/wcAAgAEAAMAAADy/wgAAgAEAAMAAADz//f/AgAEAAMAAADz//j/AgAEAAMAAADz//n/AgAEAAMAAADz//r/AgAEAAMAAADz//v/AgAEAAMAAADz//z/AgAEAAMAAADz//3/AgAEAAMAAADz//7/AgAEAAMAAADz////AgAEAAMAAADz/wAAAgAEAAMAAADz/wEAAgAEAAMAAADz/wIAAgAEAAMAAADz/wMAAgAEAAMAAADz/wQAAgAEAAMAAADz/wUAAgAEAAMAAADz/wYAAgAEAAMAAADz/wcAAgAEAAMAAADz/wgAAgAEAAMAAAD0//f/AgAEAAMAAAD0//j/AgAEAAMAAAD0//n/AgAEAAMAAAD0//r/AgAEAAMAAAD0//v/AgAEAAMAAAD0//z/AgAEAAMAAAD0//3/AgAEAAMAAAD0//7/AgAEAAMAAAD0////AgAEAAMAAAD0/wAAAgAEAAMAAAD0/wEAAgAEAAMAAAD0/wIAAgAEAAMAAAD0/wMAAgAEAAMAAAD0/wQAAgAEAAMAAAD0/wUAAgAEAAMAAAD0/wYAAgAEAAMAAAD0/wcAAgAEAAMAAAD0/wgAAgAEAAMAAAD1//f/AgAEAAMAAAD1//j/AgAEAAMAAAD1//n/AgAEAAMAAAD1//r/AgAEAAMAAAD1//v/AgAEAAMAAAD1//z/AgAEAAMAAAD1//3/AgAEAAMAAAD1//7/AgAEAAMAAAD1////AgAEAAMAAAD1/wAAAgAEAAMAAAD1/wEAAgAEAAMAAAD1/wIAAgAEAAMAAAD1/wMAAgAEAAMAAAD1/wQAAgAEAAMAAAD1/wUAAgAEAAMAAAD1/wYAAgAEAAMAAAD1/wcAAgAEAAMAAAD1/wgAAgAEAAMAAAD2//f/AgAEAAMAAAD2//j/AgAEAAMAAAD2//n/AgAEAAMAAAD2//r/AgAEAAMAAAD2//v/AgAEAAMAAAD2//z/AgAEAAMAAAD2//3/AgAEAAMAAAD2//7/AgAEAAMAAAD2////AgAEAAMAAAD2/wAAAgAEAAMAAAD2/wEAAgAEAAMAAAD2/wIAAgAEAAMAAAD2/wMAAgAEAAMAAAD2/wQAAgAEAAMAAAD2/wUAAgAEAAMAAAD2/wYAAgAEAAMAAAD2/wcAAgAEAAMAAAD2/wgAAgAEAAMAAAD3//f/AgAEAAMAAAD3//j/AgAEAAMAAAD3//n/AgAEAAMAAAD3//r/AgAEAAMAAAD3//v/AgAEAAMAAAD3//z/AgAEAAMAAAD3//3/AgAEAAMAAAD3//7/AgAEAAMAAAD3////AgAEAAMAAAD3/wAAAgAEAAMAAAD3/wEAAgAEAAMAAAD3/wIAAgAEAAMAAAD3/wMAAgAEAAMAAAD3/wQAAgAEAAMAAAD3/wUAAgAEAAMAAAD3/wYAAgAEAAMAAAD3/wcAAgAEAAMAAAD3/wgAAgAEAAMAAAD4//f/AgAEAAMAAAD4//j/AgAEAAMAAAD4//n/AgAEAAMAAAD4//r/AgAEAAMAAAD4//v/AgAEAAMAAAD4//z/AgAEAAMAAAD4//3/AgAEAAMAAAD4//7/AgAEAAMAAAD4////AgAEAAMAAAD4/wAAAgAEAAMAAAD4/wEAAgAEAAMAAAD4/wIAAgAEAAMAAAD4/wMAAgAEAAMAAAD4/wQAAgAEAAMAAAD4/wUAAgAEAAMAAAD4/wYAAgAEAAMAAAD4/wcAAgAEAAMAAAD4/wgAAgAEAAMAAAD5//f/AgAEAAMAAAD5//j/AgAEAAMAAAD5//n/AgAEAAMAAAD5//r/AgAEAAMAAAD5//v/AgAEAAMAAAD5//z/AgAEAAMAAAD5//3/AgAEAAMAAAD5//7/AgAEAAMAAAD5////AgAEAAMAAAD5/wAAAgAEAAMAAAD5/wEAAgAEAAMAAAD5/wIAAgAEAAMAAAD5/wMAAgAEAAMAAAD5/wQAAgAEAAMAAAD5/wUAAgAEAAMAAAD5/wYAAgAEAAMAAAD5/wcAAgAEAAMAAAD5/wgAAgAEAAMAAAD6//f/AgAEAAMAAAD6//j/AgAEAAMAAAD6//n/AgAEAAMAAAD6//r/AgAEAAMAAAD6//v/AgAEAAMAAAD6//z/AgAEAAMAAAD6//3/AgAEAAMAAAD6//7/AgAEAAMAAAD6////AgAEAAMAAAD6/wAAAgAEAAMAAAD6/wEAAgAEAAMAAAD6/wIAAgAEAAMAAAD6/wMAAgAEAAMAAAD6/wQAAgAEAAMAAAD6/wUAAgAEAAMAAAD6/wYAAgAEAAMAAAD6/wcAAgAEAAMAAAD6/wgAAgAEAAMAAAD7//f/AgAEAAMAAAD7//j/AgAEAAMAAAD7//n/AgAEAAMAAAD7//r/AgAEAAMAAAD7//v/AgAEAAMAAAD7//z/AgAEAAMAAAD7//3/AgAEAAMAAAD7//7/AgAEAAMAAAD7////AgAEAAMAAAD7/wAAAgAEAAMAAAD7/wEAAgAEAAMAAAD7/wIAAgAEAAMAAAD7/wMAAgAEAAMAAAD7/wQAAgAEAAMAAAD7/wUAAgAEAAMAAAD7/wYAAgAEAAMAAAD7/wcAAgAEAAMAAAD7/wgAAgAEAAMAAAD8//f/AgAEAAMAAAD8//j/AgAEAAMAAAD8//n/AgAEAAMAAAD8//r/AgAEAAMAAAD8//v/AgAEAAMAAAD8//z/AgAEAAMAAAD8//3/AgAEAAMAAAD8//7/AgAEAAMAAAD8////AgAEAAMAAAD8/wAAAgAEAAMAAAD8/wEAAgAEAAMAAAD8/wIAAgAEAAMAAAD8/wMAAgAEAAMAAAD8/wQAAgAEAAMAAAD8/wUAAgAEAAMAAAD8/wYAAgAEAAMAAAD8/wcAAgAEAAMAAAD8/wgAAgAEAAMAAAD9//f/AgAEAAMAAAD9//j/AgAEAAMAAAD9//n/AgAEAAMAAAD9//r/AgAEAAMAAAD9//v/AgAEAAMAAAD9//z/AgAEAAMAAAD9//3/AgAEAAMAAAD9//7/AgAEAAMAAAD9////AgAEAAMAAAD9/wAAAgAEAAMAAAD9/wEAAgAEAAMAAAD9/wIAAgAEAAMAAAD9/wMAAgAEAAMAAAD9/wQAAgAEAAMAAAD9/wUAAgAEAAMAAAD9/wYAAgAEAAMAAAD9/wcAAgAEAAMAAAD9/wgAAgAEAAMAAAD+//f/AgAEAAMAAAD+//j/AgAEAAMAAAD+//n/AgAEAAMAAAD+//r/AgAEAAMAAAD+//v/AgAEAAMAAAD+//z/AgAEAAMAAAD+//3/AgAEAAMAAAD+//7/AgAEAAMAAAD+////AgAEAAMAAAD+/wAAAgAEAAMAAAD+/wEAAgAEAAMAAAD+/wIAAgAEAAMAAAD+/wMAAgAEAAMAAAD+/wQAAgAEAAMAAAD+/wUAAgAEAAMAAAD+/wYAAgAEAAMAAAD+/wcAAgAEAAMAAAD+/wgAAgAEAAMAAAD///f/AgAEAAMAAAD///j/AgAEAAMAAAD///n/AgAEAAMAAAD///r/AgAEAAMAAAD///v/AgAEAAMAAAD///z/AgAEAAMAAAD///3/AgAEAAMAAAD///7/AgAEAAMAAAD/////AgAEAAMAAAD//wAAAgAEAAMAAAD//wEAAgAEAAMAAAD//wIAAgAEAAMAAAD//wMAAgAEAAMAAAD//wQAAgAEAAMAAAD//wUAAgAEAAMAAAD//wYAAgAEAAMAAAD//wcAAgAEAAMAAAD//wgAAgAEAAMAAAAAAPf/AgAEAAMAAAAAAPj/AgAEAAMAAAAAAPn/AgAEAAMAAAAAAPr/AgAEAAMAAAAAAPv/AgAEAAMAAAAAAPz/AgAEAAMAAAAAAP3/AgAEAAMAAAAAAP7/AgAEAAMAAAAAAP//AgAEAAMAAAAAAAAAAgAEAAMAAAAAAAEAAgAEAAMAAAAAAAIAAgAEAAMAAAAAAAMAAgAEAAMAAAAAAAQAAgAEAAMAAAAAAAUAAgAEAAMAAAAAAAYAAgAEAAMAAAAAAAcAAgAEAAMAAAAAAAgAAgAEAAMAAAABAPf/AgAEAAMAAAABAPj/AgAEAAMAAAABAPn/AgAEAAMAAAABAPr/AgAEAAMAAAABAPv/AgAEAAMAAAABAPz/AgAEAAMAAAABAP3/AgAEAAMAAAABAP7/AgAEAAMAAAABAP//AgAEAAMAAAABAAAAAgAEAAMAAAABAAEAAgAEAAMAAAABAAIAAgAEAAMAAAABAAMAAgAEAAMAAAABAAQAAgAEAAMAAAABAAUAAgAEAAMAAAABAAYAAgAEAAMAAAABAAcAAgAEAAMAAAABAAgAAgAEAAMAAAACAPf/AgAEAAMAAAACAPj/AgAEAAMAAAACAPn/AgAEAAMAAAACAPr/AgAEAAMAAAACAPv/AgAEAAMAAAACAPz/AgAEAAMAAAACAP3/AgAEAAMAAAACAP7/AgAEAAMAAAACAP//AgAEAAMAAAACAAAAAgAEAAMAAAACAAEAAgAEAAMAAAACAAIAAgAEAAMAAAACAAMAAgAEAAMAAAACAAQAAgAEAAMAAAACAAUAAgAEAAMAAAACAAYAAgAEAAMAAAACAAcAAgAEAAMAAAACAAgAAgAEAAMAAAADAPf/AgAEAAMAAAADAPj/AgAEAAMAAAADAPn/AgAEAAMAAAADAPr/AgAEAAMAAAADAPv/AgAEAAMAAAADAPz/AgAEAAMAAAADAP3/AgAEAAMAAAADAP7/AgAEAAMAAAADAP//AgAEAAMAAAADAAAAAgAEAAMAAAADAAEAAgAEAAMAAAADAAIAAgAEAAMAAAADAAMAAgAEAAMAAAADAAQAAgAEAAMAAAADAAUAAgAEAAMAAAADAAYAAgAEAAMAAAADAAcAAgAEAAMAAAADAAgAAgAEAAMAAAAEAPf/AgAEAAMAAAAEAPj/AgAEAAMAAAAEAPn/AgAEAAMAAAAEAPr/AgAEAAMAAAAEAPv/AgAEAAMAAAAEAPz/AgAEAAMAAAAEAP3/AgAEAAMAAAAEAP7/AgAEAAMAAAAEAP//AgAEAAMAAAAEAAAAAgAEAAMAAAAEAAEAAgAEAAMAAAAEAAIAAgAEAAMAAAAEAAMAAgAEAAMAAAAEAAQAAgAEAAMAAAAEAAUAAgAEAAMAAAAEAAYAAgAEAAMAAAAEAAcAAgAEAAMAAAAEAAgAAgAEAAMAAAAFAPf/AgAEAAMAAAAFAPj/AgAEAAMAAAAFAPn/AgAEAAMAAAAFAPr/AgAEAAMAAAAFAPv/AgAEAAMAAAAFAPz/AgAEAAMAAAAFAP3/AgAEAAMAAAAFAP7/AgAEAAMAAAAFAP//AgAEAAMAAAAFAAAAAgAEAAMAAAAFAAEAAgAEAAMAAAAFAAIAAgAEAAMAAAAFAAMAAgAEAAMAAAAFAAQAAgAEAAMAAAAFAAUAAgAEAAMAAAAFAAYAAgAEAAMAAAAFAAcAAgAEAAMAAAAFAAgAAgAEAAMAAAAGAPf/AgAEAAMAAAAGAPj/AgAEAAMAAAAGAPn/AgAEAAMAAAAGAPr/AgAEAAMAAAAGAPv/AgAEAAMAAAAGAPz/AgAEAAMAAAAGAP3/AgAEAAMAAAAGAP7/AgAEAAMAAAAGAP//AgAEAAMAAAAGAAAAAgAEAAMAAAAGAAEAAgAEAAMAAAAGAAIAAgAEAAMAAAAGAAMAAgAEAAMAAAAGAAQAAgAEAAMAAAAGAAUAAgAEAAMAAAAGAAYAAgAEAAMAAAAGAAcAAgAEAAMAAAAGAAgAAgAEAAMAAAAHAPf/AgAEAAMAAAAHAPj/AgAEAAMAAAAHAPn/AgAEAAMAAAAHAPr/AgAEAAMAAAAHAPv/AgAEAAMAAAAHAPz/AgAEAAMAAAAHAP3/AgAEAAMAAAAHAP7/AgAEAAMAAAAHAP//AgAEAAMAAAAHAAAAAgAEAAMAAAAHAAEAAgAEAAMAAAAHAAIAAgAEAAMAAAAHAAMAAgAEAAMAAAAHAAQAAgAEAAMAAAAHAAUAAgAEAAMAAAAHAAYAAgAEAAMAAAAHAAcAAgAEAAMAAAAHAAgAAgAEAAMAAAAIAPf/AgAEAAMAAAAIAPj/AgAEAAMAAAAIAPn/AgAEAAMAAAAIAPr/AgAEAAMAAAAIAPv/AgAEAAMAAAAIAPz/AgAEAAMAAAAIAP3/AgAEAAMAAAAIAP7/AgAEAAMAAAAIAP//AgAEAAMAAAAIAAAAAgAEAAMAAAAIAAEAAgAEAAMAAAAIAAIAAgAEAAMAAAAIAAMAAgAEAAMAAAAIAAQAAgAEAAMAAAAIAAUAAgAEAAMAAAAIAAYAAgAEAAMAAAAIAAcAAgAEAAMAAAAIAAgAAgAEAAMAAAAJAPf/AgAEAAMAAAAJAPj/AgAEAAMAAAAJAPn/AgAEAAMAAAAJAPr/AgAEAAMAAAAJAPv/AgAEAAMAAAAJAPz/AgAEAAMAAAAJAP3/AgAEAAMAAAAJAP7/AgAEAAMAAAAJAP//AgAEAAMAAAAJAAAAAgAEAAMAAAAJAAEAAgAEAAMAAAAJAAIAAgAEAAMAAAAJAAMAAgAEAAMAAAAJAAQAAgAEAAMAAAAJAAUAAgAEAAMAAAAJAAYAAgAEAAMAAAAJAAcAAgAEAAMAAAAJAAgAAgAEAAMAAAAKAPf/AgAEAAMAAAAKAPj/AgAEAAMAAAAKAPn/AgAEAAMAAAAKAPr/AgAEAAMAAAAKAPv/AgAEAAMAAAAKAPz/AgAEAAMAAAAKAP3/AgAEAAMAAAAKAP7/AgAEAAMAAAAKAP//AgAEAAMAAAAKAAAAAgAEAAMAAAAKAAEAAgAEAAMAAAAKAAIAAgAEAAMAAAAKAAMAAgAEAAMAAAAKAAQAAgAEAAMAAAAKAAUAAgAEAAMAAAAKAAYAAgAEAAMAAAAKAAcAAgAEAAMAAAAKAAgAAgAEAAMAAAALAPf/AgAEAAMAAAALAPj/AgAEAAMAAAALAPn/AgAEAAMAAAALAPr/AgAEAAMAAAALAPv/AgAEAAMAAAALAPz/AgAEAAMAAAALAP3/AgAEAAMAAAALAP7/AgAEAAMAAAALAP//AgAEAAMAAAALAAAAAgAEAAMAAAALAAEAAgAEAAMAAAALAAIAAgAEAAMAAAALAAMAAgAEAAMAAAALAAQAAgAEAAMAAAALAAUAAgAEAAMAAAALAAYAAgAEAAMAAAALAAcAAgAEAAMAAAALAAgAAgAEAAMAAAAMAPf/AgAEAAMAAAAMAPj/AgAEAAMAAAAMAPn/AgAEAAMAAAAMAPr/AgAEAAMAAAAMAPv/AgAEAAMAAAAMAPz/AgAEAAMAAAAMAP3/AgAEAAMAAAAMAP7/AgAEAAMAAAAMAP//AgAEAAMAAAAMAAAAAgAEAAMAAAAMAAEAAgAEAAMAAAAMAAIAAgAEAAMAAAAMAAMAAgAEAAMAAAAMAAQAAgAEAAMAAAAMAAUAAgAEAAMAAAAMAAYAAgAEAAMAAAAMAAcAAgAEAAMAAAAMAAgAAgAEAAMAAAANAPf/AgAEAAMAAAANAPj/AgAEAAMAAAANAPn/AgAEAAMAAAANAPr/AgAEAAMAAAANAPv/AgAEAAMAAAANAPz/AgAEAAMAAAANAP3/AgAEAAMAAAANAP7/AgAEAAMAAAANAP//AgAEAAMAAAANAAAAAgAEAAMAAAANAAEAAgAEAAMAAAANAAIAAgAEAAMAAAANAAMAAgAEAAMAAAANAAQAAgAEAAMAAAANAAUAAgAEAAMAAAANAAYAAgAEAAMAAAANAAcAAgAEAAMAAAANAAgAAgAEAAMAAAAOAPf/AgAEAAMAAAAOAPj/AgAEAAMAAAAOAPn/AgAEAAMAAAAOAPr/AgAEAAMAAAAOAPv/AgAEAAMAAAAOAPz/AgAEAAMAAAAOAP3/AgAEAAMAAAAOAP7/AgAEAAMAAAAOAP//AgAEAAMAAAAOAAAAAgAEAAMAAAAOAAEAAgAEAAMAAAAOAAIAAgAEAAMAAAAOAAMAAgAEAAMAAAAOAAQAAgAEAAMAAAAOAAUAAgAEAAMAAAAOAAYAAgAEAAMAAAAOAAcAAgAEAAMAAAAOAAgAAgAEAAMAAAAPAPf/AgAEAAMAAAAPAPj/AgAEAAMAAAAPAPn/AgAEAAMAAAAPAPr/AgAEAAMAAAAPAPv/AgAEAAMAAAAPAPz/AgAEAAMAAAAPAP3/AgAEAAMAAAAPAP7/AgAEAAMAAAAPAP//AgAEAAMAAAAPAAAAAgAEAAMAAAAPAAEAAgAEAAMAAAAPAAIAAgAEAAMAAAAPAAMAAgAEAAMAAAAPAAQAAgAEAAMAAAAPAAUAAgAEAAMAAAAPAAYAAgAEAAMAAAAPAAcAAgAEAAMAAAAPAAgAAgAEAAMAAADu//X/AgAEAAMAAADu//b/AgAEAAMAAADu//f/AgAEAAMAAADu//j/AgAEAAMAAADu//n/AgAEAAMAAADu//r/AgAEAAMAAADu//v/AgAEAAMAAADu//z/AgAEAAMAAADu//3/AgAEAAMAAADu//7/AgAEAAMAAADu////AgAEAAMAAADu/wAAAgAEAAMAAADu/wEAAgAEAAMAAADu/wIAAgAEAAMAAADu/wMAAgAEAAMAAADu/wQAAgAEAAMAAADu/wUAAgAEAAMAAADu/wYAAgAEAAMAAADu/wcAAgAEAAMAAADu/wgAAgAEAAMAAADu/wkAAgAEAAMAAADu/woAAgAEAAMAAADu/wsAAgAEAAMAAADv//X/AgAEAAMAAADv//b/AgAEAAMAAADv//f/AgAEAAMAAADv//j/AgAEAAMAAADv//n/AgAEAAMAAADv//r/AgAEAAMAAADv//v/AgAEAAMAAADv//z/AgAEAAMAAADv//3/AgAEAAMAAADv//7/AgAEAAMAAADv////AgAEAAMAAADv/wAAAgAEAAMAAADv/wEAAgAEAAMAAADv/wIAAgAEAAMAAADv/wMAAgAEAAMAAADv/wQAAgAEAAMAAADv/wUAAgAEAAMAAADv/wYAAgAEAAMAAADv/wcAAgAEAAMAAADv/wgAAgAEAAMAAADv/wkAAgAEAAMAAADv/woAAgAEAAMAAADv/wsAAgAEAAMAAADw//X/AgAEAAMAAADw//b/AgAEAAMAAADw/wkAAgAEAAMAAADw/woAAgAEAAMAAADw/wsAAgAEAAMAAADx//X/AgAEAAMAAADx//b/AgAEAAMAAADx/wkAAgAEAAMAAADx/woAAgAEAAMAAADx/wsAAgAEAAMAAADy//X/AgAEAAMAAADy//b/AgAEAAMAAADy/wkAAgAEAAMAAADy/woAAgAEAAMAAADy/wsAAgAEAAMAAADz//X/AgAEAAMAAADz//b/AgAEAAMAAADz/wkAAgAEAAMAAADz/woAAgAEAAMAAADz/wsAAgAEAAMAAAD0//X/AgAEAAMAAAD0//b/AgAEAAMAAAD0/wkAAgAEAAMAAAD0/woAAgAEAAMAAAD0/wsAAgAEAAMAAAD1//X/AgAEAAMAAAD1//b/AgAEAAMAAAD1/wkAAgAEAAMAAAD1/woAAgAEAAMAAAD1/wsAAgAEAAMAAAD2//X/AgAEAAMAAAD2//b/AgAEAAMAAAD2/wkAAgAEAAMAAAD2/woAAgAEAAMAAAD2/wsAAgAEAAMAAAD3//X/AgAEAAMAAAD3//b/AgAEAAMAAAD3/wkAAgAEAAMAAAD3/woAAgAEAAMAAAD3/wsAAgAEAAMAAAD4//X/AgAEAAMAAAD4//b/AgAEAAMAAAD4/wkAAgAEAAMAAAD4/woAAgAEAAMAAAD4/wsAAgAEAAMAAAD5//X/AgAEAAMAAAD5//b/AgAEAAMAAAD5/wkAAgAEAAMAAAD5/woAAgAEAAMAAAD5/wsAAgAEAAMAAAD6//X/AgAEAAMAAAD6//b/AgAEAAMAAAD6/wkAAgAEAAMAAAD6/woAAgAEAAMAAAD6/wsAAgAEAAMAAAD7//X/AgAEAAMAAAD7//b/AgAEAAMAAAD7/wkAAgAEAAMAAAD7/woAAgAEAAMAAAD7/wsAAgAEAAMAAAD8//X/AgAEAAMAAAD8//b/AgAEAAMAAAD8/wkAAgAEAAMAAAD8/woAAgAEAAMAAAD8/wsAAgAEAAMAAAD9//X/AgAEAAMAAAD9//b/AgAEAAMAAAD9/wkAAgAEAAMAAAD9/woAAgAEAAMAAAD9/wsAAgAEAAMAAAD+//X/AgAEAAMAAAD+//b/AgAEAAMAAAD+/wkAAgAEAAMAAAD+/woAAgAEAAMAAAD+/wsAAgAEAAMAAAD///X/AgAEAAMAAAD///b/AgAEAAMAAAD//wkAAgAEAAMAAAD//woAAgAEAAMAAAD//wsAAgAEAAMAAAAAAPX/AgAEAAMAAAAAAPb/AgAEAAMAAAAAAAkAAgAEAAMAAAAAAAoAAgAEAAMAAAAAAAsAAgAEAAMAAAABAPX/AgAEAAMAAAABAPb/AgAEAAMAAAABAAkAAgAEAAMAAAABAAoAAgAEAAMAAAABAAsAAgAEAAMAAAACAPX/AgAEAAMAAAACAPb/AgAEAAMAAAACAAkAAgAEAAMAAAACAAoAAgAEAAMAAAACAAsAAgAEAAMAAAADAPX/AgAEAAMAAAADAPb/AgAEAAMAAAADAAkAAgAEAAMAAAADAAoAAgAEAAMAAAADAAsAAgAEAAMAAAAEAPX/AgAEAAMAAAAEAPb/AgAEAAMAAAAEAAkAAgAEAAMAAAAEAAoAAgAEAAMAAAAEAAsAAgAEAAMAAAAFAPX/AgAEAAMAAAAFAPb/AgAEAAMAAAAFAAkAAgAEAAMAAAAFAAoAAgAEAAMAAAAFAAsAAgAEAAMAAAAGAPX/AgAEAAMAAAAGAPb/AgAEAAMAAAAGAAkAAgAEAAMAAAAGAAoAAgAEAAMAAAAGAAsAAgAEAAMAAAAHAPX/AgAEAAMAAAAHAPb/AgAEAAMAAAAHAAkAAgAEAAMAAAAHAAoAAgAEAAMAAAAHAAsAAgAEAAMAAAAIAPX/AgAEAAMAAAAIAPb/AgAEAAMAAAAIAAkAAgAEAAMAAAAIAAoAAgAEAAMAAAAIAAsAAgAEAAMAAAAJAPX/AgAEAAMAAAAJAPb/AgAEAAMAAAAJAAkAAgAEAAMAAAAJAAoAAgAEAAMAAAAJAAsAAgAEAAMAAAAKAPX/AgAEAAMAAAAKAPb/AgAEAAMAAAAKAAkAAgAEAAMAAAAKAAoAAgAEAAMAAAAKAAsAAgAEAAMAAAALAPX/AgAEAAMAAAALAPb/AgAEAAMAAAALAAkAAgAEAAMAAAALAAoAAgAEAAMAAAALAAsAAgAEAAMAAAAMAPX/AgAEAAMAAAAMAPb/AgAEAAMAAAAMAAkAAgAEAAMAAAAMAAoAAgAEAAMAAAAMAAsAAgAEAAMAAAANAPX/AgAEAAMAAAANAPb/AgAEAAMAAAANAAkAAgAEAAMAAAANAAoAAgAEAAMAAAANAAsAAgAEAAMAAAAOAPX/AgAEAAMAAAAOAPb/AgAEAAMAAAAOAAkAAgAEAAMAAAAOAAoAAgAEAAMAAAAOAAsAAgAEAAMAAAAPAPX/AgAEAAMAAAAPAPb/AgAEAAMAAAAPAAkAAgAEAAMAAAAPAAoAAgAEAAMAAAAPAAsAAgAEAAMAAAAQAPX/AgAEAAMAAAAQAPb/AgAEAAMAAAAQAPf/AgAEAAMAAAAQAPj/AgAEAAMAAAAQAPn/AgAEAAMAAAAQAPr/AgAEAAMAAAAQAPv/AgAEAAMAAAAQAPz/AgAEAAMAAAAQAP3/AgAEAAMAAAAQAP7/AgAEAAMAAAAQAP//AgAEAAMAAAAQAAAAAgAEAAMAAAAQAAEAAgAEAAMAAAAQAAIAAgAEAAMAAAAQAAMAAgAEAAMAAAAQAAQAAgAEAAMAAAAQAAUAAgAEAAMAAAAQAAYAAgAEAAMAAAAQAAcAAgAEAAMAAAAQAAgAAgAEAAMAAAAQAAkAAgAEAAMAAAAQAAoAAgAEAAMAAAAQAAsAAgAEAAMAAAARAPX/AgAEAAMAAAARAPb/AgAEAAMAAAARAPf/AgAEAAMAAAARAPj/AgAEAAMAAAARAPn/AgAEAAMAAAARAPr/AgAEAAMAAAARAPv/AgAEAAMAAAARAPz/AgAEAAMAAAARAP3/AgAEAAMAAAARAP7/AgAEAAMAAAARAP//AgAEAAMAAAARAAAAAgAEAAMAAAARAAEAAgAEAAMAAAARAAIAAgAEAAMAAAARAAMAAgAEAAMAAAARAAQAAgAEAAMAAAARAAUAAgAEAAMAAAARAAYAAgAEAAMAAAARAAcAAgAEAAMAAAARAAgAAgAEAAMAAAARAAkAAgAEAAMAAAARAAoAAgAEAAMAAAARAAsAAgAEAAMAAAASAPX/AgAEAAMAAAASAPb/AgAEAAMAAAASAPf/AgAEAAMAAAASAPj/AgAEAAMAAAASAPn/AgAEAAMAAAASAPr/AgAEAAMAAAASAPv/AgAEAAMAAAASAPz/AgAEAAMAAAASAP3/AgAEAAMAAAASAP7/AgAEAAMAAAASAP//AgAEAAMAAAASAAAAAgAEAAMAAAASAAEAAgAEAAMAAAASAAIAAgAEAAMAAAASAAMAAgAEAAMAAAASAAQAAgAEAAMAAAASAAUAAgAEAAMAAAASAAYAAgAEAAMAAAASAAcAAgAEAAMAAAASAAgAAgAEAAMAAAASAAkAAgAEAAMAAAASAAoAAgAEAAMAAAASAAsAAgAEAAMAAAA=")
tile_set = SubResource("TileSet_0k1se")

[node name="Platforms" type="TileMapLayer" parent="TileLayers"]
z_index = -4
tile_map_data = PackedByteArray("AADy/wcAAgADAAAAAADz/wcAAgABAAAAAAD0/wcAAgACAAAAAAD1/wcAAgADAAAAAAD2/wcAAgAEAAAAAAD3/wcAAgAFAAAAAAD4/wcAAgAGAAAAAAD5/wcAAgAAAAAAAAD6/wcAAgABAAAAAAD7/wcAAgACAAAAAAD8/wcAAgADAAAAAAD9/wcAAgAEAAAAAAD+/wcAAgAFAAAAAAD//wcAAgAGAAAAAAAAAAcAAgAAAAAAAAABAAcAAgABAAAAAAACAAcAAgACAAAAAAADAAcAAgADAAAAAAAEAAcAAgAEAAAAAAAFAAcAAgAFAAAAAAAGAAcAAgAGAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgABAAAAAAAJAAcAAgACAAAAAAAKAAcAAgADAAAAAAALAAcAAgAEAAAAAAAMAAcAAgAFAAAAAAANAAcAAgAEAAAAAADx/wcAAgAAAAAAAAAOAAcAAgAGAAAAAAA=")
tile_set = SubResource("TileSet_0k1se")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UI" instance=ExtResource("7_0oe61")]
visible = false

[node name="LevelTitle" parent="UI" instance=ExtResource("8_iflv0")]
visible = false

[node name="CountdownTimer" parent="UI" instance=ExtResource("9_qvpgf")]

[node name="OutOfTime" parent="UI" instance=ExtResource("10_ep5uf")]
visible = false

[node name="LevelWinMenu" parent="UI" instance=ExtResource("11_5tgq5")]
visible = false

[node name="TutorialPrompts" parent="UI" instance=ExtResource("12_prg6g")]
visible = false
